validando si key partido esta definida para ser renderizada en el html

--- a/core/templates/evolucion_transferencias.html
+++ b/core/templates/evolucion_transferencias.html
@@ -25,7 +25,11 @@
         <tr>
             <td>Partida presupuestaria</td>
             {% for i in evolucion %}
-                <td>{{ i.partida|floatformat:"0" }}%</td>
+                <td>
+                    {% if i.partida %}
+                        {{ i.partida|floatformat:"0" }}%
+                    {% endif %}
+                </td>
             {% endfor %}
         </tr>
         <tr>
